--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
         </div>
 
         <div class="work-card">
-          <h3>Басня Крылова 2.0</h3>
-          <p>Современная интерпретация классической басни, адаптированная для digital-поколения.</p>
-          <a href="#" class="btn">Скоро будет</a>
-        </div>
+  <h3>Басня Крылова 2.0</h3>
+  <p>Экзистенциальная интерпретация классики. Философский трактат о тщетности бытия в современном прочтении.</p>
+  <a href="basnya.html" class="btn">Читать басню</a>
+</div>
       </div>
     </section>
 
