--- a/index.html
+++ b/index.html
@@ -181,6 +181,24 @@
       color: var(--muted);
     }
 
+    /* Стили для нового блока в светлой теме */
+    .new-direction .work-card {
+      background: linear-gradient(135deg, #f0f4ff 0%, #e6f0ff 100%);
+      border: 1px solid #d0e0ff;
+    }
+
+    /* Стили для нового блока в тёмной теме */
+    [data-theme="dark"] .new-direction .work-card {
+      background: linear-gradient(135deg, #1a2235 0%, #151e2d 100%);
+      border: 1px solid #3a4a6b;
+    }
+
+    [data-theme="dark"] .new-direction h2,
+    [data-theme="dark"] .new-direction h3,
+    [data-theme="dark"] .new-direction p {
+      color: #e2e8f0;
+    }
+
     .process-steps {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -334,11 +352,11 @@
       </div>
     </section>
 
-    <!-- НОВЫЙ БЛОК — АСТРОЛОГИЯ -->
+    <!-- НОВЫЙ БЛОК — АСТРОЛОГИЯ & ПРАКТИКА -->
     <section class="new-direction">
       <h2>Новое направление: Астрология & Практика</h2>
       <div class="work-grid">
-        <div class="work-card" style="background: linear-gradient(135deg, #f0f4ff 0%, #e6f0ff 100%); border: 1px solid #d0e0ff;">
+        <div class="work-card">
           <div style="text-align: center; margin-bottom: 15px;">
             <img src="9m.png" alt="Astrology Forecast" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
           </div>
@@ -369,25 +387,18 @@
   </div>
 
   <script>
-    // Функция переключения темы
     document.getElementById('theme-toggle').addEventListener('click', function() {
       const currentTheme = document.body.getAttribute('data-theme');
       const newTheme = currentTheme === 'light' ? 'dark' : 'light';
       document.body.setAttribute('data-theme', newTheme);
       localStorage.setItem('theme', newTheme);
-      
-      // Меняем иконку в зависимости от темы
       this.textContent = newTheme === 'light' ? '🌓' : '☀️';
     });
 
-    // При загрузке страницы проверяем сохраненную тему
     document.addEventListener('DOMContentLoaded', function() {
       const savedTheme = localStorage.getItem('theme') || 'light';
       document.body.setAttribute('data-theme', savedTheme);
-      
-      // Устанавливаем правильную иконку для темы
-      const themeButton = document.getElementById('theme-toggle');
-      themeButton.textContent = savedTheme === 'light' ? '🌓' : '☀️';
+      document.getElementById('theme-toggle').textContent = savedTheme === 'light' ? '🌓' : '☀️';
     });
   </script>
 </body>
