--- a/astro-horoscope-december2025.html
+++ b/astro-horoscope-december2025.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>General Astrological Forecast — December 2025</title>
+  <title>General Astrological Forecast - December 2025</title>
   <style>
     :root {
       --bg: #fdfdfd;
