--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
       </div>
     </section>
 
-    <!-- НОВЫЙ БЛОК — АСТРОЛОГИЯ & ПРАКТИКА -->
+    <!-- НОВЫЙ БЛОК — НОВЫЕ НАПРАВЛЕНИЯ -->
     <section class="new-direction">
-      <h2>Новое направление: Астрология & Практика</h2>
+      <h2>Новые направления</h2>
       <div class="work-grid">
         <div class="work-card">
           <div style="text-align: center; margin-bottom: 15px;">
@@ -363,6 +363,15 @@
           <h3>Астропрогноз: декабрь 2025</h3>
           <p>Ежедневные, недельные и месячные гороскопы для англоязычной аудитории. Этика, ясность, без пугающих формулировок.</p>
           <a href="astro-horoscope-december2025.html" class="btn">Читать прогноз</a>
+        </div>
+
+        <div class="work-card">
+          <div style="text-align: center; margin-bottom: 15px;">
+            <img src="seed-plate.jpg" alt="Крипто кошелёк и seed-фраза" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
+          </div>
+          <h3>Как создать крипто кошелёк и сохранить seed-фразу</h3>
+          <p>Образовательный материал для воронки: как не потерять крипту в первый же день. Часть onboarding-контента для новичков.</p>
+          <a href="crypto-wallet-guide.html" class="btn">Читать руководство</a>
         </div>
       </div>
     </section>
@@ -377,7 +386,7 @@
     </section>
 
     <footer>
-      <p>© Игорь Валеев, 2024</p>
+      <p>© Игорь Валеев, 2025</p>
       <p>
         <a href="https://dzen.ru/id/68a20fda5107c216ddc8eb44" target="_blank">Дзен</a> | 
         <a href="mailto:post370026@yandex.ru">Email</a> | 
