--- a/crypto-wallet-guide.html
+++ b/crypto-wallet-guide.html
@@ -2,136 +2,207 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Как создать крипто кошелёк и сохранить seed-фразу</title>
   <meta name="description" content="Узнайте, как создать криптокошелек за 10 минут и навсегда забыть про потерю доступа — с правильной seed-фразой и без глупых ошибок.">
   <style>
+    :root {
+      --bg: #fff;
+      --fg: #1a1a1a;
+      --card: #f9f9f9;
+      --muted: #666;
+      --accent: #3b82f6;
+      --border: #eee;
+    }
+
+    [data-theme="dark"] {
+      --bg: #0f172a;
+      --fg: #e2e8f0;
+      --card: #1e293b;
+      --muted: #94a3b8;
+      --accent: #60a5fa;
+      --border: #334155;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
       line-height: 1.7;
-      color: #1a1a1a;
-      background: #fff;
+      color: var(--fg);
+      background: var(--bg);
+      transition: background 0.3s ease, color 0.3s ease;
     }
+
     h1 {
       font-size: 2.2rem;
       margin-bottom: 20px;
       text-align: center;
+      color: var(--fg);
     }
+
     h2 {
       font-size: 1.5rem;
       margin: 30px 0 15px;
+      color: var(--fg);
     }
+
     p, li {
       margin-bottom: 16px;
+      color: var(--fg);
     }
+
     ul, ol {
       padding-left: 20px;
       margin-bottom: 20px;
+      color: var(--fg);
     }
+
     .dyor {
-      background: #f9f9f9;
-      border-left: 4px solid #d1d1d1;
+      background: var(--card);
+      border-left: 4px solid var(--accent);
       padding: 12px 16px;
       margin-bottom: 30px;
       font-size: 0.95em;
+      color: var(--fg);
+      border-radius: 4px;
     }
-    .note {
-      font-size: 0.9em;
-      color: #666;
-      margin-top: 30px;
-    }
+
     img {
       max-width: 100%;
       height: auto;
       border-radius: 8px;
       margin: 20px 0;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    [data-theme="dark"] img {
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
+
+    .note {
+      font-size: 0.9em;
+      color: var(--muted);
+      margin-top: 30px;
+    }
+
+    .theme-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      z-index: 100;
     }
   </style>
 </head>
-<body>
+<body data-theme="light">
+  <button class="theme-toggle" id="theme-toggle" aria-label="Переключить тему">🌓</button>
 
-<div class="dyor">
-<strong>DYOR</strong> — Этот материал носит исключительно образовательный характер. Он не является финансовым, инвестиционным или юридическим советом. Криптовалюты — высоко волатильный актив. Вы несёте полную ответственность за свои действия. Мы не рекомендуем, не продвигаем и не гарантируем никакие активы, кошельки или сервисы.
-</div>
+  <div class="dyor">
+    <strong>DYOR</strong> — Этот материал носит исключительно образовательный характер. Он не является финансовым, инвестиционным или юридическим советом. Криптовалюты — высоко волатильный актив. Вы несёте полную ответственность за свои действия. Мы не рекомендуем, не продвигаем и не гарантируем никакие активы, кошельки или сервисы.
+  </div>
 
-<h1>Как создать крипто кошелёк и сохранить seed-фразу</h1>
+  <h1>Как создать крипто кошелёк и сохранить seed-фразу</h1>
 
-Ты уже понял.  
-Крипта — это не "цифровые деньги".  
-Это твоя собственность, которой никто не управляет, кроме тебя — и чтобы эта собственность не исчезла в один клик, тебе нужен крипто кошелёк, где ты — единственный хозяин ключей.
+  Ты уже понял.<br>
+  Крипта — это не "цифровые деньги".<br>
+  Это твоя собственность, которой никто не управляет, кроме тебя — и чтобы эта собственность не исчезла в один клик, тебе нужен крипто кошелёк, где ты — единственный хозяин ключей.
 
-<h2>1. Зачем нужен кошелёк и что такое seed-фраза</h2>
-<p>Представь сейф с золотом. У него есть замок. У замка — ключ. Потерял ключ — потерял золото. Никакой службы поддержки. Никакого "восстановить пароль".</p>
-<p>Кошелёк в криптомире — это твой сейф. А seed-фраза — твой мастер-ключ. Обычно это 12 или 24 простых слова, сгенерированных при создании кошелька.</p>
-<p>Важно: это не логин и не пароль.<br>
-— Логин и пароль можно восстановить.<br>
-— Seed-фразу — никак. Если она утеряна, активы утеряны навсегда.<br>
-— Если её украдут — украдут всё.</p>
+  <h2>1. Зачем нужен кошелёк и что такое seed-фраза</h2>
+  <p>Представь сейф с золотом. У него есть замок. У замка — ключ. Потерял ключ — потерял золото. Никакой службы поддержки. Никакого "восстановить пароль".</p>
+  <p>Кошелёк в криптомире — это твой сейф. А seed-фраза — твой мастер-ключ. Обычно это 12 или 24 простых слова, сгенерированных при создании кошелька.</p>
+  <p>Важно: это не логин и не пароль.<br>
+  — Логин и пароль можно восстановить.<br>
+  — Seed-фразу — никак. Если она утеряна, активы утеряны навсегда.<br>
+  — Если её украдут — украдут всё.</p>
 
-<h2>2. Пошагово: установка и создание кошелька</h2>
-<p>Не пугайся — это проще, чем настроить смартфон.</p>
-<ol>
-  <li>Скачай официальное приложение (например, Trust Wallet или MetaMask) только из App Store или Google Play. Никаких ссылок из Telegram и "друга в лс".</li>
-  <li>Запусти приложение и выбери "Создать новый кошелёк" (не "Импортировать"!).</li>
-  <li>Прими условия использования.</li>
-  <li>Приложение сгенерирует seed-фразу — 12 или 24 слова. Не нажимай "Далее", пока не запишешь их.</li>
-  <li>Подтверди фразу: выбери слова в правильном порядке.</li>
-  <li>Придумай надёжный пароль для разблокировки кошелька на устройстве. Он защищает от физического доступа, но не заменяет seed-фразу.</li>
-  <li>Готово. Ты — полноправный владелец.</li>
-</ol>
+  <h2>2. Пошагово: установка и создание кошелька</h2>
+  <p>Не пугайся — это проще, чем настроить смартфон.</p>
+  <ol>
+    <li>Скачай официальное приложение (например, Trust Wallet или MetaMask) только из App Store или Google Play. Никаких ссылок из Telegram и "друга в лс".</li>
+    <li>Запусти приложение и выбери "Создать новый кошелёк" (не "Импортировать"!).</li>
+    <li>Прими условия использования.</li>
+    <li>Приложение сгенерирует seed-фразу — 12 или 24 слова. Не нажимай "Далее", пока не запишешь их.</li>
+    <li>Подтверди фразу: выбери слова в правильном порядке.</li>
+    <li>Придумай надёжный пароль для разблокировки кошелька на устройстве. Он защищает от физического доступа, но не заменяет seed-фразу.</li>
+    <li>Готово. Ты — полноправный владелец.</li>
+  </ol>
 
-<h2>3. Как правильно записать и хранить seed-фразу</h2>
-<p>Ты записал? Отлично. Теперь не испорть всё глупостью.</p>
-<p><strong>Можно и нужно:</strong></p>
-<ul>
-  <li>Записать от руки на плотной бумаге.</li>
-  <li>Перенести на металлическую пластину (выдерживает огонь, воду, время).</li>
-  <li>Хранить в нескольких надёжных местах: сейф, родственник, банковская ячейка.</li>
-</ul>
-<p><strong>Нельзя ни при каких обстоятельствах:</strong></p>
-<ul>
-  <li>Делать фото или скриншот.</li>
-  <li>Сохранять в облаке (Google Drive, iCloud, Telegram "мне").</li>
-  <li>Писать в заметках на телефоне.</li>
-  <li>Показывать кому-либо, даже "админу поддержки".</li>
-</ul>
-<p>Любое цифровое копирование — риск взлома. Seed должна жить только в офлайне.</p>
+  <h2>3. Как правильно записать и хранить seed-фразу</h2>
+  <p>Ты записал? Отлично. Теперь не испорть всё глупостью.</p>
+  <p><strong>Можно и нужно:</strong></p>
+  <ul>
+    <li>Записать от руки на плотной бумаге.</li>
+    <li>Перенести на металлическую пластину (выдерживает огонь, воду, время).</li>
+    <li>Хранить в нескольких надёжных местах: сейф, родствен尼克, банковская ячейка.</li>
+  </ul>
+  <p><strong>Нельзя ни при каких обстоятельствах:</strong></p>
+  <ul>
+    <li>Делать фото или скриншот.</li>
+    <li>Сохранять в облаке (Google Drive, iCloud, Telegram "мне").</li>
+    <li>Писать в заметках на телефоне.</li>
+    <li>Показывать кому-либо, даже "админу поддержки".</li>
+  </ul>
+  <p>Любое цифровое копирование — риск взлома. Seed должна жить только в офлайне.</p>
 
-<img src="seed-plate.jpg" alt="Металлическая пластина с выбитой seed-фразой">
+  <img src="seed-plate.jpg" alt="Металлическая пластина с выбитой seed-фразой">
 
-<h2>4. Безопасность: краткий чек-лист</h2>
-<ul>
-  <li>Включи двухфакторную аутентификацию (2FA) везде, где можно.</li>
-  <li>Установи антивирус и менеджер паролей.</li>
-  <li>Никогда не переходи по ссылкам из Telegram/Discord — фишинг убивает больше, чем волатильность.</li>
-  <li>Обновляй ПО и кошелёк регулярно.</li>
-  <li>Не подключай кошелёк к непроверенным dApps — есть риск подписания вредоносной транзакции.</li>
-</ul>
-<p>Это не паранойя. Это базовый уровень гигиены в криптомире.</p>
+  <h2>4. Безопасность: краткий чек-лист</h2>
+  <ul>
+    <li>Включи двухфакторную аутентификацию (2FA) везде, где можно.</li>
+    <li>Установи антивирус и менеджер паролей.</li>
+    <li>Никогда не переходи по ссылкам из Telegram/Discord — фишинг убивает больше, чем волатильность.</li>
+    <li>Обновляй ПО и кошелёк регулярно.</li>
+    <li>Не подключай кошелёк к непроверенным dApps — есть риск подписания вредоносной транзакции.</li>
+  </ul>
+  <p>Это не паранойя. Это базовый уровень гигиены в криптомире.</p>
 
-<h2>5. FAQ</h2>
-<p><strong>Можно сфотографировать seed?</strong><br>
-Нет. Ни в коем случае. Фото = цифровая копия = утечка.</p>
-<p><strong>Что делать при утере seed-фразы?</strong><br>
-Ничего. Восстановить нельзя. Это как сжечь наличные.</p>
-<p><strong>Подходит ли один seed для нескольких сетей?</strong><br>
-Да. Одна фраза даёт доступ ко всем твоим активам во всех поддерживаемых сетях (Ethereum, BSC, Solana и др.).</p>
+  <h2>5. FAQ</h2>
+  <p><strong>Можно сфотографировать seed?</strong><br>
+  Нет. Ни в коем случае. Фото = цифровая копия = утечка.</p>
+  <p><strong>Что делать при утере seed-фразы?</strong><br>
+  Ничего. Восстановить нельзя. Это как сжечь наличные.</p>
+  <p><strong>Подходит ли один seed для нескольких сетей?</strong><br>
+  Да. Одна фраза даёт доступ ко всем твоим активам во всех поддерживаемых сетях (Ethereum, BSC, Solana и др.).</p>
 
-<p>Ты не просто создал кошелёк. Ты стал владельцем.<br>
-И с этого момента — только от тебя зависит, останется ли твоя крипта с тобой.</p>
+  <p>Ты не просто создал кошелёк. Ты стал владельцем.<br>
+  И с этого момента — только от тебя зависит, останется ли твоя крипта с тобой.</p>
 
-<p>Пока вы читали эту статью, где-то в мире ещё один новичок сохранил свою seed-фразу в облако. Или, может быть, наоборот — вырезал слова на металле и спрятал в сейфе. Надеюсь, это был ты.<br>
-Если ты только начинаешь — сохрани этот текст. Он часть образовательной воронки: не для продажи, а чтобы ты не потерял всё в первый же день.<br>
-P.S. от холодного кошелька: "Я не умею говорить. Но если ты меня уронишь в огонь — я останусь. А ты — запомни слова".</p>
+  <p>Пока вы читали эту статью, где-то в мире ещё один новичок сохранил свою seed-фразу в облако. Или, может быть, наоборот — вырезал слова на металле и спрятал в сейфе. Надеюсь, это был ты.<br>
+  Если ты только начинаешь — сохрани этот текст. Он часть образовательной воронки: не для продажи, а чтобы ты не потерял всё в первый же день.<br>
+  P.S. от холодного кошелька: "Я не умею говорить. Но если ты меня уронишь в огонь — я останусь. А ты — запомни слова".</p>
 
-<div class="note">
-Обновлено: 04.12.2025<br>
-Материал носит образовательный характер и не является инвест советом.
-</div>
+  <div class="note">
+    Обновлено: 04.12.2025<br>
+    Материал носит образовательный характер и не является инвест советом.
+  </div>
 
-<p>#КриптоБезопасность #SeedФраза #Кошелёк #Крипта #Onboarding #DYOR #КриптоЛампа</p>
+  <p>#КриптоБезопасность #SeedФраза #Кошелёк #Крипта #Onboarding #DYOR #КриптоЛампа</p>
 
+  <script>
+    function setTheme(theme) {
+      document.body.setAttribute('data-theme', theme);
+      localStorage.setItem('theme', theme);
+      document.getElementById('theme-toggle').textContent = theme === 'light' ? '🌓' : '☀️';
+    }
+
+    document.getElementById('theme-toggle').addEventListener('click', () => {
+      const current = document.body.getAttribute('data-theme');
+      setTheme(current === 'light' ? 'dark' : 'light');
+    });
+
+    const saved = localStorage.getItem('theme') || 'light';
+    setTheme(saved);
+  </script>
 </body>
 </html>
